update build for mac